@@ -193,6 +193,20 @@ static int xmp_truncate(const char *path, off_t size)
     return 0;
 }
 
+static int xmp_ftruncate(const char *path, off_t size,
+                         struct fuse_file_info *fi)
+{
+    int res;
+
+    (void) path;
+
+    res = ftruncate(fi->fh, size);
+    if(res == -1)
+        return -errno;
+
+    return 0;
+}
+
 static int xmp_utime(const char *path, struct utimbuf *buf)
 {
     int res;
@@ -353,6 +367,7 @@ static struct fuse_operations xmp_oper = {
     .chmod	= xmp_chmod,
     .chown	= xmp_chown,
     .truncate	= xmp_truncate,
+    .ftruncate	= xmp_ftruncate,
     .utime	= xmp_utime,
     .open	= xmp_open,
     .read	= xmp_read,
